# dbt-project-task

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
airflow/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
airflow/dags/: cleanup-pipeline.py  retail_pipeline.py  retail_pipeline_incremental.py  retail_pipeline_initial.py
airflow/dags/utils/: constants.py  dbt_logger.py  dbt_runner.py  get_creeds.py  load_mode.py  telegram_message.py
dbt_project/: .user.yml  dbt_project.yml  local_retail.duckdb  package-lock.yml  profiles.yml  pyproject.toml
dbt_project/models/marts/: fct_orders.sql  fct_orders_history.sql
dbt_project/models/raw_vault/hubs/: hub_customer.sql  hub_order.sql
dbt_project/models/raw_vault/links/: link_customer_order.sql
dbt_project/models/raw_vault/sats/: sat_order_details.sql
dbt_project/models/staging/: stg_orders.sql
dbt_project/seeds/: raw_orders.csv
dbt_vault_retail/: README.md  dbt_project.yml  package-lock.yml  profiles.yml
dbt_vault_retail/macros/: hashing.sql  record_source.sql
dbt_vault_retail/models/buisness_vault/pit/: pit_customer.sql  pit_order.sql  pit_order_customer.sql
dbt_vault_retail/models/buisness_vault/sats/: bv_customer_master_sat.sql  eff_sat_order_status.sql
dbt_vault_retail/models/business_vault/pit/: pit_customer.sql  pit_order.sql  pit_order_customer.sql
dbt_vault_retail/models/business_vault/sats/: bv_customer_master_sat.sql  eff_sat_order_status.sql
dbt_vault_retail/models/marts/dim/: dim_customer.sql  dim_date.sql  dim_product.sql
dbt_vault_retail/models/marts/fct/: fct_sales.sql
dbt_vault_retail/models/raw_vault/hubs/: hub_customer.sql  hub_order.sql  hub_product.sql
dbt_vault_retail/models/sources/: snowflake_sample.yml
dbt_vault_retail/models/staging/: stg_orders.sql
dbt_vault_retail/seeds/: customer_master.csv  raw_orders.csv
docker/: entrypoint.sh
(+10 files in other folders)
