[project]
name = "airflow-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=2.8",
    "apache-airflow-providers-snowflake>=6.7.0",
    "astronomer-cosmos>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "loguru>=0.7.3",
]
